# spotymod

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY.md  alt_sram.lds  app.cpp  main.cpp
.github/workflows/: build-plugin.yml
bench/: Makefile  README.md  anchor.cpp  cycles.h  main.cpp  mem.cpp  mem.h  report.cpp  report.h  run.py  runner.cpp  workload.h  workloads_abl.cpp  workloads_daisysp.cpp  workloads_dust.cpp  workloads_memory.cpp  workloads_mod.cpp  workloads_sampler.cpp  workloads_system.cpp  workloads_taps.cpp
bench/openocd/: spotykach-sram.cfg
docs/: milestone-history.md  roadmap.md
docs/bench/: 2026-07-18-0e6eeb5.csv  2026-07-18-0e6eeb5.md  2026-07-18-185c488.csv  2026-07-18-185c488.md  2026-07-18-256da41.csv  2026-07-18-256da41.md  2026-07-18-7e99b74.csv  2026-07-18-7e99b74.md  2026-07-19-0b274e9.csv  2026-07-19-0b274e9.md  2026-07-19-12f05ce.csv  2026-07-19-12f05ce.md  2026-07-19-6e38090.csv  2026-07-19-6e38090.md  2026-07-19-87f3538.csv  2026-07-19-87f3538.md  2026-07-19-94468af.csv  2026-07-19-94468af.md  2026-07-19-9be5df9.csv  2026-07-19-9be5df9.md  2026-07-19-c7f6a73.csv  2026-07-19-c7f6a73.md  2026-07-19-dccb8a3.csv  2026-07-19-dccb8a3.md  2026-07-20-5d53901.csv  2026-07-20-5d53901.md  2026-07-20-69ab499.csv  2026-07-20-69ab499.md  2026-07-22-649d0b7.csv  2026-07-22-649d0b7.md  2026-07-22-8668367.csv  2026-07-22-8668367.md  2026-07-22-b7aa452.csv  2026-07-22-b7aa452.md  2026-07-22-ec4f633.csv  2026-07-22-ec4f633.md  2026-07-22-ef84678.csv  2026-07-22-ef84678.md
docs/superpowers/plans/: 2026-07-10-spotykach-modulation-first-engine-foundation.md  2026-07-10-spotykach-style-master.md  2026-07-11-spotykach-fx.md  2026-07-11-spotykach-scale-quantization.md  2026-07-11-spotykach-synth-voice.md  2026-07-12-spotykach-ambient-reverb-v2.md  2026-07-12-spotykach-capture-sequencer.md  2026-07-12-spotykach-center-section.md  2026-07-12-spotykach-entropy-sequencer.md  2026-07-13-spotykach-dynamics.md  2026-07-14-spotykach-melody-engine-rework.md  2026-07-14-spotykach-reverb-diffusion.md  2026-07-14-spotykach-reverb-drywet.md  2026-07-15-website-vcv-devlogs-hero.md  2026-07-16-choke-priority.md  2026-07-16-groove-variation-zones.md  2026-07-16-rhythm-groove.md  2026-07-16-sync-couple-redesign.md  2026-07-17-chord-layer-color.md  2026-07-17-filt-knob.md  2026-07-17-flux-synced-delay.md  2026-07-17-mod-tide.md  2026-07-17-step-clock.md  2026-07-18-bench-ablation-family.md  2026-07-18-bench-firmware.md  2026-07-18-color-motion-target.md  2026-07-18-dust-grain-cloud.md  2026-07-18-mod-plane-optimization.md  2026-07-18-spotymod-faceplate-redesign.md  2026-07-19-dust-phase-a-listening-brief.md  2026-07-19-fast-tanh.md  2026-07-19-mod-plane-control-rate.md  2026-07-19-part-glue-control-rate.md  2026-07-20-rhythm-fed-delay-taps.md  2026-07-20-sampler-texture-deck-engine.md  2026-07-21-sampler-generous-ranges.md  2026-07-21-sampler-morphagene-controls.md  2026-07-21-sampler-vcv-binding.md  2026-07-22-sampler-fixes.md  2026-07-22-sampler-slice-groove.md  (+4 more)
docs/superpowers/specs/: 2026-07-10-spotykach-firmware-faceplate-study-design.md  2026-07-10-spotykach-modulation-first-synth-design.md  2026-07-11-spotykach-fx-design.md  2026-07-11-spotykach-scales-design.md  2026-07-11-spotykach-synth-voice-design.md  2026-07-12-spotykach-ambient-reverb-v2-design.md  2026-07-12-spotykach-capture-sequencer-design.md  2026-07-12-spotykach-center-section-design.md  2026-07-12-spotykach-entropy-sequencer-design.md  2026-07-12-spotykach-firmware-shell-design.md  2026-07-12-spotykach-per-step-sample-hold-design.md  2026-07-12-spotykach-sampler-adapter-design.md  2026-07-13-spotykach-dynamics-design.md  2026-07-14-spotykach-melody-engine-rework-design.md  2026-07-14-spotykach-reverb-diffusion-design.md  2026-07-14-spotykach-reverb-drywet-design.md  2026-07-15-website-vcv-devlogs-hero-design.md  2026-07-16-choke-priority-design.md  2026-07-16-rhythm-groove-design.md  (+31 more)
engine/: instrument.cpp  instrument.h
engine/center/: center.cpp  center.h  transport.h
engine/fx/: comp.cpp  comp.h  dust.cpp  dust.h  flux.cpp  flux.h  fx_util.h  grit.cpp  grit.h  limiter.h  part_fx.cpp  part_fx.h  reverb.cpp  reverb.h  taps.cpp  taps.h
engine/mod/: capture.h  divisions.h  lane.cpp  lane.h  lane_id.h  phrase_gen.h  range.h  rhythm_view.h  rng.h  super_modulator.cpp  super_modulator.h  waveforms.h
engine/parts/: engine_iface.h  part.cpp  part.h  test_tone_engine.h
engine/pitch/: chord.h  quantizer.h
engine/sampler/: grain.h  sample_buffer.cpp  sample_buffer.h  sampler_config.h  sampler_engine.cpp  sampler_engine.h  slice_map.cpp  slice_map.h
engine/synth/: env.h  morph_osc.h  synth_engine.cpp  synth_engine.h  voice.cpp  voice.h
engine/util/: fast_sin.h  fast_tanh.h  math.h  onepole.h  svf_lp.h
host/render/: main.cpp  scenario.cpp  scenario.h  wav_reader.h  wav_writer.h
host/shared/: wav_reader.h
host/vcv/: .gitignore  Makefile  README.md  plugin.json
renders/: ctrl_identity.csv
src/core/: buffer.cpp  buffer.h  config.cpp  config.h  core.cpp  core.h  deck.cpp  deck.h  driver.cpp  generator.cpp  generator.h  vox.cpp
src/hw/: buffer.sdram.h  card.cpp  card.h  hardware.cpp  hardware.h
src/memory/: storage.cpp  storage.h  wav.cpp  wav.h
src/ui/: core.midi.cpp  core.midi.h  core.ui.cpp  core.ui.h  core.ui.leds.cpp  core.ui.pads.cpp  mvalue.cpp  mvalue.h
tests/: smoke.cpp  test_capture.cpp  test_center.cpp  test_choke.cpp  test_chord.cpp  test_comp.cpp  test_divisions.cpp  test_dust.cpp  test_entropy_seq.cpp  test_env.cpp  test_evolve.cpp  test_fast_sin.cpp  test_fast_tanh.cpp  test_filt.cpp  test_flux.cpp  test_fx_deps.cpp  test_fx_util.cpp  test_gate_density.cpp  test_grain.cpp  test_grit.cpp  test_instrument.cpp  test_lane.cpp  test_lane_tick.cpp  test_limiter.cpp  test_mod_tide.cpp  test_morph_osc.cpp  test_new_phrase.cpp  test_oliverb.cpp  test_part.cpp  test_part_fx.cpp  test_phrase_gen.cpp  test_quantizer.cpp  test_range.cpp  test_reverb.cpp  test_review_register.cpp  test_rhythm_ring.cpp  test_rng.cpp  test_sample_buffer.cpp  test_sampler_engine.cpp  test_sampler_part.cpp  (+13 more)
(+46 files in other folders)
